# husync

./: Cargo.toml  LICENSE  README.md  build.rs  install.sh
.github/workflows/: release.yml
src/: main.rs
